tests/fixtures/valid_programs/functions.cryo
namespace Main;

import IO from <io/stdio>;

function add(a: int, b: int) -> int {
    return a + b;
}

function multiply(x: int, y: int) -> int {
    return x * y;
}

function fibonacci(n: int) -> int {
    if (n <= 0) {
        return 0;
    } else if (n == 1) {
        return 1;
    } else {
        return fibonacci(n - 1) + fibonacci(n - 2);
    }
}

function no_return_func(msg: string) -> void {
    IO::println(msg);
    return;
}

function main() -> int {
    // Function calls
    const sum: int = add(5, 10);
    const product: int = multiply(3, 4);
    
    IO::println("Function Call Results:");
    IO::print_int(sum);     // 15
    IO::print_int(product); // 12
    
    // Recursive function
    const fib_5: int = fibonacci(5);
    IO::println("Fibonacci(5):");
    IO::print_int(fib_5);   // 5
    
    // Void function
    no_return_func("Hello from void function");
    
    return 0;
}