tests/fixtures/invalid_programs/function_args.cryo
namespace Main;

import IO from <io/stdio>;

// Function signature mismatch
function add(x: int, y: int) -> int {
    return x + y;
}

function main() -> int {
    // Wrong number of arguments
    const result1: int = add(5);        // Too few arguments
    const result2: int = add(5, 10, 15); // Too many arguments
    
    return 0;
}